--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -17,5 +17,10 @@ spec:
         image: nanajanashia/argocd-app:1.1
         ports:
         - containerPort: 8080
-
-
+        resources:
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
+          requests:
+            cpu: "100m"
+            memory: "256Mi"
